--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -56,7 +56,7 @@
         <h2>처방 내역 동기화</h2>
         <p>약국을 다녀오셨다면<br>처방 내역을 동기화 하세요</p>
     </a>
-    <a href="#" class="card">
+    <a href="/chat/chat" class="card">
         <div class="icon">🤖</div>
         <h2>AI 챗봇 상담</h2>
         <p>현재 불편한 곳이 있어서<br>도움이 필요하시면<br>AI 챗봇 상담을 받아보세요</p>
