--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -88,7 +88,7 @@
         }
 
         function appendMessage(sender, content) {
-            const div = $('<div>').addClass('chat-message').addClass(sender.toLowerCase()).text(content);
+            const div = $('<div>').addClass('chat-message').addClass(sender.toLowerCase()).html(content);
             $('#chat-box').append(div);
             $('#chat-box').scrollTop($('#chat-box')[0].scrollHeight);
         }
