--- a/src/main/resources/static/css/reminderStyles.css
+++ b/src/main/resources/static/css/reminderStyles.css
@@ -1,4 +1,3 @@
-/* 공통 레이아웃 */
 .wrapper {
     margin-top: 80px;
     display: flex;
@@ -25,7 +24,6 @@
     width: 100px;
 }
 
-/* 월 선택 UI */
 .month-selector {
     text-align: center;
     font-size: 18px;
@@ -39,30 +37,28 @@
     font-size: 20px;
 }
 
-/* 날짜 슬라이더 */
 .date-slider {
     display: flex;
-    align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-    /*gap: 10px;*/
 }
 
 #date-list-wrapper {
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
     width: 260px;
+    white-space: nowrap;
+    scroll-behavior: smooth;
 }
 
 #date-list {
-    display: flex;
+    display: inline-flex;
     gap: 8px;
-    transition: transform 0.3s ease;
 }
 
 .date-btn {
     padding: 6px 12px;
     border-radius: 8px;
-    /*background-color: #eee;*/
     cursor: pointer;
     font-weight: bold;
     min-width: 30px;
@@ -70,23 +66,9 @@
 }
 
 .date-btn.active {
-    /*background-color: #4cd9c6;*/
     color: #007bff;
 }
 
-/* 날짜 넘김 버튼 */
-.date-nav {
-    font-size: 22px;
-    font-weight: bold;
-    cursor: pointer;
-    user-select: none;
-    padding: 4px 10px;
-    border-radius: 6px;
-    /*background-color: #fff;*/
-    /*box-shadow: 2px 2px 5px rgba(0,0,0,0.1);*/
-}
-
-/* 복약 기록 리스트 */
 #intake-list {
     display: flex;
     flex-direction: column;
