--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -6,13 +6,11 @@
     <link rel="stylesheet" href="/css/authStyles.css">
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/reminderStyles.css">
-
-    <!-- 공통 -->
-    <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <link rel="stylesheet" href="/css/navStyles.css">
+
+    <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script src="/js/setReferrer.js" defer></script>
 
-    <!-- 전역 변수와 js의 미리정의 필드 -->
     <script th:inline="javascript">
         const intakeLog = /*[[${reminder.intakeLog}]]*/ null;
         const SS_USER = /*[[${session.SS_USER}]]*/ null;
@@ -20,21 +18,15 @@
         const prescriptionId = /*[[${reminder.prescriptionId}]]*/ null;
         let reminder = /*[[${reminder}]]*/ null;
 
-        console.log("reminder : ", reminder);
-
         const dateMap = {};
         const monthMap = {};
         let currentMonth = "";
-        let datePage = 0;
-        const datesPerPage = 7;
         let currentMonthDates = [];
     </script>
 
-    <!-- 외부 JS 파일 붙여서 활성화 -->
     <script src="/js/reminder.js" defer></script>
 </head>
 <body>
-<!-- 네비게이션 -->
 <nav>
     <div class="nav-content">
         <div class="nav-group same_width justify-left">
@@ -46,10 +38,10 @@
             <a href="/chat/chat">AI 챗봇 상담</a>
             <a href="/map/map">주변 약국 찾기</a>
         </div>
-        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
+        <div class="nav-group same_width justify-right" th:if="${session.SS_USER == null}">
             <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
         </div>
-        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
+        <div class="nav-group after_login same_width justify-right" th:if="${session.SS_USER != null}">
             <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
@@ -67,9 +59,7 @@
             <span id="next-month">&gt;</span>
         </div>
         <div class="date-slider">
-            <span id="date-prev" class="date-nav">&lt;</span>
             <div id="date-list-wrapper"><div id="date-list"></div></div>
-            <span id="date-next" class="date-nav">&gt;</span>
         </div>
         <div id="intake-list"></div>
     </div>
