--- a/src/main/resources/templates/map/map.html
+++ b/src/main/resources/templates/map/map.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>약국 찾기</title>
-    <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
-<!--    공통 네비게이션 바-->
-    <link rel="stylesheet" href="/css/navStyles.css">
 
+    <link rel="stylesheet" href="/css/navStyles.css">
     <link rel="stylesheet" href="/css/mapStyles.css">
 
-    <script type="text/javascript"
-            src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=512ac014b725c9a5fdc6f6f9f778bfeb&libraries=services"></script>
+    <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=512ac014b725c9a5fdc6f6f9f778bfeb&libraries=services"></script>
     <script src="/js/setReferrer.js" defer></script>
 
     <script th:inline="javascript">
         const SS_USER = /*[[${session.SS_USER}]]*/ null;
     </script>
 
-    <!-- 분리된 JS 파일 연결 -->
     <script src="/js/map.js" defer></script>
 </head>
 <body>
@@ -36,13 +33,15 @@
             <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
         </div>
         <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
-            <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
+            <a href="/user/pwd_verification" class="nav-icon">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
     </div>
 </nav>
+
 <div class="container">
     <div class="map-wrapper">
+        <button id="regionSearchBtn">타 지역 약국 찾기</button>
         <div id="map" style="width:100%;height:100%; border-radius: 20px;"></div>
         <div id="pharmacy-list"></div>
     </div>
