--- a/src/main/resources/templates/map/map.html
+++ b/src/main/resources/templates/map/map.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/mapStyles.css">
 
     <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
-    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=512ac014b725c9a5fdc6f6f9f778bfeb&libraries=services"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=512ac014b725c9a5fdc6f6f9f778bfeb&libraries=services,geometry"></script>
     <script src="/js/setReferrer.js" defer></script>
 
     <script th:inline="javascript">
