--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -24,7 +24,7 @@
         let currentMonthDates = [];
     </script>
 
-    <script src="/js/reminder.js" defer></script>
+    <script src="/js/Reminder.js" defer></script>
 </head>
 <body>
 <nav>
