--- a/src/main/resources/static/css/chatStyles.css
+++ b/src/main/resources/static/css/chatStyles.css
@@ -196,3 +196,21 @@ html, body {
     padding-right: 3px;
      /* 기본값은 0 */
 }
+
+.chat-message.bot ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.chat-message.bot li {
+    margin-bottom: 12px;
+    border-left: 4px solid #ccc;
+    padding-left: 12px;
+}
+
+/* strong 다음 줄바꿈 유도 */
+.chat-message.bot p strong {
+    display: block;
+    margin-bottom: 4px;
+}
