--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -183,7 +183,10 @@
         <div class="chat-sessions">
             <div class="session-header">
                 <h3>상담 내역</h3>
-                <button id="new-session-btn">+ 새 상담</button>
+                <div>
+                    <button class="displayNone" id="delete-btn">- 상담 삭제</button>
+                    <button id="new-session-btn">+ 새 상담</button>
+                </div>
             </div>
             <div class="session-list">
                 <!-- 세션 목록 -->
