일일 접속자 수 확인 기능 구현 월 선택 구현

--- a/src/main/resources/templates/admin/banUserManagement.html
+++ b/src/main/resources/templates/admin/banUserManagement.html
@@ -174,7 +174,7 @@
     <div class="auth-box">
         <div id="prescription-container">
             <div class="prescription-image">
-                <img src="/icons/userManagement.png" alt="회원 관리 아이콘">
+                <img src="/icons/ban-user.png" alt="차단 회원 관리 아이콘">
             </div>
             <div class="title" style="font-weight: bold; font-size: x-large">처방내역</div>
             <div id="prescription-list"></div>
@@ -185,12 +185,12 @@
 <!-- 모달 -->
 <div class="modal" id="reminderModal">
     <div class="modal-content">
-        <h3>권한 변경</h3>
+        <h3>처방받은 복용 시기</h3>
 
         <div class="meal-time-options" id="mealOptionWrapper">
-            <div class="meal-btn" data-value="super">슈퍼</div>
-            <div class="meal-btn" data-value="admin">관리자</div>
-            <div class="meal-btn" data-value="user">회원</div>
+            <div class="meal-btn" data-value="아침">아침</div>
+            <div class="meal-btn" data-value="점심">점심</div>
+            <div class="meal-btn" data-value="저녁">저녁</div>
         </div>
 
         <div class="modal-buttons" id="modalBtnWrapper">
