월별 일일 접속자수 그래프 구현 완료

--- a/src/main/resources/static/css/navStyles.css
+++ b/src/main/resources/static/css/navStyles.css
@@ -22,9 +22,13 @@ nav {
 .nav-group {
     display: flex;
     gap: 1.5rem;
+    justify-content: space-around;
     align-items: center;
 }
 
+#serviceNav {
+    min-width: 500px;
+}
 
 .after_login {
     gap: 0 !important;
