--- a/src/main/resources/static/css/adminIndexStyles.css
+++ b/src/main/resources/static/css/adminIndexStyles.css
@@ -65,10 +65,9 @@ footer {
     padding: 0.625rem;
 }
 
-.card  {
+.card {
     width: 250px;
     height: auto;
-    /*background-color: #eaf7f4;*/
     background-color: #ffffff;
     border-radius: 0.625rem;
     box-shadow: 0.625rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
@@ -91,38 +90,78 @@ footer {
     gap: 1.875rem;
 }
 
+#dailyChart {
+    width: 100%;
+    height: 100%;
+}
+
 .chart-card {
     width: 800px;
     height: 520px;
-    /*background-color: #eaf7f4;*/
     background-color: #ffffff;
     border-radius: 0.625rem;
     box-shadow: 0.625rem 0.625rem 0.25rem rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    padding: 1.25rem;
+    justify-content: flex-start;
+    align-items: stretch;
+    padding: 1.25rem 1.25rem 0 1.25rem;
     text-align: center;
 }
 
-/*.card:hover {*/
-/*  cursor: pointer;*/
-/*}*/
-
-.highlight {
-    background-color: var(--highlight-color);
-    color: var(--white-text);
+.chart {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
-/* 여기 추가 */
+.chart canvas {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.chart-container-title {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.monthSelect-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#monthPicker {
+    padding: 10px 14px;
+    font-size: 16px;
+    border: 2px solid #70d9c5;
+    border-radius: 8px;
+    outline: none;
+    width: 100px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.2s ease;
+    background-color: #fff;
+    color: #333;
+    font-family: 'Spoqa Han Sans Neo', sans-serif;
+}
+
+#monthPicker:hover {
+    border-color: #47bda7;
+}
+
+#monthPicker:focus {
+    border-color: #2aa98f;
+    box-shadow: 0 0 0 4px rgba(112, 217, 197, 0.2);
+}
+
 .card:hover {
     cursor: pointer;
 }
-
-/*.card.highlight:hover {*/
-/*    border: 3px solid black;*/
-/*}*/
 
 .icon {
     font-size: 2.5rem;
@@ -153,7 +192,7 @@ p {
     height: 600px !important;
 }
 
-.myPage-icon{
+.myPage-icon {
     font-size: 5rem !important;
 }
 
@@ -161,7 +200,6 @@ p {
     font-size: large;
 }
 
-/* 모달 기본 스타일 */
 .modal {
     display: none;
     position: fixed;
@@ -173,7 +211,7 @@ p {
     overflow: auto;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.4); /* 반투명 배경 */
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .autoWidth {
@@ -205,26 +243,26 @@ p {
     height: 80%;
 }
 
-.terms-content>p {
+.terms-content > p {
     margin: 0;
 }
 
 .agree-btn {
     width: 100%;
     flex: 0 0 auto;
-    padding: 0 0.625rem; /* 10px -> 0.625rem */
+    padding: 0 0.625rem;
     background-color: #4697ff;
     border: 0;
-    border-radius: 0.5rem; /* 8px -> 0.5rem */
+    border-radius: 0.5rem;
     font-weight: 550;
     box-sizing: border-box;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 3.125rem; /* 50px -> 3.125rem */
+    height: 3.125rem;
     white-space: nowrap;
-    margin-top: 0.625rem; /* 10px -> 0.625rem */
+    margin-top: 0.625rem;
     font-size: large;
 }
 
@@ -249,28 +287,28 @@ p {
 }
 
 .extra_top_margin {
-    margin-top: 1.25rem !important; /* 20px -> 1.25rem */
+    margin-top: 1.25rem !important;
 }
 
 .input_box {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 0.3125rem; /* 5px -> 0.3125rem */
+    margin-top: 0.3125rem;
     height: auto;
-    gap: 0.3125rem; /* 5px -> 0.3125rem */
+    gap: 0.3125rem;
 }
 
 .two_button {
     width: 45%;
-    height: 3.125rem; /* 50px -> 3.125rem */
+    height: 3.125rem;
     background-color: #4697ff;
     display: flex;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.1); /* 0 4px 10px -> 0.25rem 0.625rem */
-    border-radius: 0.5rem; /* 8px -> 0.5rem */
+    box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
     border: 0;
     white-space: nowrap;
     font-weight: 550;
@@ -280,14 +318,14 @@ p {
 
 #disagreeButton {
     background-color: #5ddb5f;
-    color : white;
+    color: white;
 }
 
 #agreeButton {
     background-color: #f72044;
-    color : white;
+    color: white;
 }
 
-#agreeButton:hover, #disagreeButton:hover{
+#agreeButton:hover, #disagreeButton:hover {
     border: 3px solid black;
 }
