월별 일일 접속자수 그래프 구현 완료

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -244,7 +244,7 @@
 <div class="container">
     <div class="chart-card">
         <div class="chart-container-title">
-            <h2>일일 접속자 수 그래프</h2>
+            <h2>월별 일일 접속자 수 그래프</h2>
             <div class="monthSelect-container">
                 <input type="text" id="monthPicker" placeholder="년/월 선택" readonly>
             </div>
