유저 권한 변경 기능 구현

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>메인페이지</title>
+    <title>관리자 페이지</title>
     <link rel="stylesheet" href="/css/adminIndexStyles.css">
     <link rel="stylesheet" href="/css/navStyles.css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css" rel="stylesheet">
