--- a/src/main/resources/templates/admin/userManagement.html
+++ b/src/main/resources/templates/admin/userManagement.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>처방내역 조회</title>
+    <title>회원 관리</title>
 
     <!-- 공통 스타일 -->
     <link rel="stylesheet" th:href="@{/css/authStyles.css}">
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="/css/card.css">
 
     <!-- 이 페이지 전용 스타일 -->
-    <link rel="stylesheet" href="/css/prescriptionListStyles.css">
+    <link rel="stylesheet" href="/css/userManagementtStyles.css">
 
     <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script src="/js/setReferrer.js" defer></script>
 
     <script th:inline="javascript">
-        const prescriptionList = /*[[${prescriptionList}]]*/ null;
         const SS_USER = /*[[${session.SS_USER}]]*/ null;
-
+        let userList;
         let targetUserId = null;
+        let targetUserRole = null;
 
         $(document).ready(function () {
             if (SS_USER == null) {
@@ -28,112 +28,120 @@
                 return;
             }
 
-            renderPrescriptionList(prescriptionList);
+            getUserList();
 
             // 알림 버튼 클릭
-            $(document).on("click", ".remind-btn", function () {
-                selectedPrescriptionId = $(this).data("id");
+            $(document).on("click", ".user-role", function () {
+                targetUserId = $(this).data("id");
+                $("#roleModal").addClass("show");
 
-                const remindYn = $(this).data("remind");
-                if (remindYn === 'Y') {
-                    $.ajax({
-                        url: "/health/removeReminder",
-                        type: "POST",
-                        contentType: "application/json",
-                        data: JSON.stringify({
-                            prescriptionId: selectedPrescriptionId,
-                            remindYn: "N"
-                        }),
-                        success: function (json) {
-                            const updatedList = json.data;
-                            renderPrescriptionList(updatedList);
-                        },
-                        error: function () {
-                            alert("알림 해제 실패");
-                        }
-                    });
-                } else {
-                    $("#reminderModal").addClass("show");
-                }
+                const role = $(this).data("role");
             });
 
-            $(document).on("click", ".manage-btn", function () {
-                selectedPrescriptionId = $(this).data("id");
+            $(document).on("click", ".ban-btn", function () {
+                targetUserId = $(this).data("id");
                 location.href="/health/reminder?prescriptionId="+selectedPrescriptionId;
             });
 
             // 복용 시기 선택
-            $(".meal-btn").on("click", function () {
-                $(this).toggleClass("selected");
+            $(".role-btn").on("click", function () {
+                $(".role-btn").removeClass("selected"); // 모든 버튼에서 selected 제거
+                $(this).addClass("selected"); // 클릭한 버튼에만 selected 추가
             });
 
             // 알림 설정 확인
-            $("#confirmReminderBtn").on("click", function () {
-                const selectedMeals = [];
-                $(".meal-btn.selected").each(function () {
-                    selectedMeals.push($(this).data("value"));
+            $("#confirmRoleBtn").on("click", function () {
+                $(".role-btn.selected").each(function () {
+                    targetUserRole = $(this).data("value");
                 });
 
-                if (selectedMeals.length === 0) {
-                    alert("복용 시기를 1개 이상 선택해주세요.");
-                    return;
+                if (targetUserRole === null) {
+                    alert("권한을 선택해주세요.");
+                    return
                 }
+
+                console.log("대상 유저 :", targetUserId);
+                console.log("바뀐 권한 :", targetUserRole);
 
                 $.ajax({
                     type: "POST",
-                    url: "/health/setReminder",
+                    url: "/admin/updateRole",
                     contentType: "application/json",
                     data: JSON.stringify({
-                        prescriptionId: selectedPrescriptionId,
-                        remindYn: "Y",
-                        dailyIntakeCnt: selectedMeals.length
+                        orgId: targetUserId,
+                        role: targetUserRole
                     }),
                     success: function (json) {
                         const updatedList = json.data;
 
-                        $("#reminderModal").removeClass("show");
-                        $(".meal-btn").removeClass("selected");
-                        renderPrescriptionList(updatedList);
+                        closeRoleModal();
+                        renderUserList(updatedList);
                     },
                     error: function () {
-                        alert("알림 설정 실패");
+                        alert("권한 변경 실패");
                     }
                 });
             });
 
             // 모달 닫기
-            $("#closeReminderModal").on("click", function () {
-                $("#reminderModal").removeClass("show");
-                $(".meal-btn").removeClass("selected");
+            $("#closeRoleModal").on("click", function () {
+                closeRoleModal();
             });
         });
 
-        function renderPrescriptionList(prescriptionList) {
-            const container = $("#prescription-list");
+        function closeRoleModal() {
+            $("#roleModal").removeClass("show");
+            $(".role-btn").removeClass("selected");
+        }
+
+        function getUserList() {
+            $.ajax({
+                type: "POST",
+                url: "/admin/getUserList",
+                contentType: "application/json",
+                success: function (json) {
+                    userList = json.data;
+                    console.log("userList : ", userList);
+                    renderUserList(userList);
+                },
+                error: function () {
+                    alert("오류발생");
+                }
+            });
+        }
+
+        function renderUserList(userList) {
+            const container = $("#user-list");
             container.empty();
 
-            prescriptionList.forEach(item => {
-                const remindYn = item.remindYn;
-                const remindText = remindYn === "Y" ? "알림 해제" : "알림 설정";
-                const formattedDate = new Date(item.prescriptionDate).toISOString().split('T')[0];
+            userList.forEach(item => {
+                const userId = item.userId;
+                const userName = item.userName;
+                const userNickname = item.userNickname;
+                const gender = item.gender
+                const userEmail = item.userEmail;
+                const phoneNumber = item.phoneNumber;
+                const role = item.role;
+
+                const roleText = role === 'super' ? '슈퍼' : (role === 'admin' ? '관리자' : '회원');
 
                 const itemHtml = `
-                    <div id="prescription-${item.prescriptionId}" class="status-card">
-                        <div class="indicator ${remindYn === 'Y' ? 'green' : 'grey'}"></div>
+                    <div id="user-${item.userId}" class="status-card">
                         <div class="content">
-                            <div class="prescription-date">${formattedDate}</div>
-                            <div class="store-name">${item.storeName}</div>
-
-                            <button class="remind-btn"
-                                    data-id="${item.prescriptionId}"
-                                    data-remind="${remindYn}">
-                                ${remindText}
+                            <div class="user-id items">${userId}</div>
+                            <div class="user-name items">${userName}</div>
+                            <div class="user-nickname items">${userNickname}</div>
+                            <div class="user-gender items">${gender}</div>
+                            <div class="user-email items">${userEmail}</div>
+                            <div class="user-phoneNumber items">${phoneNumber}</div>
+                            <div class="user-role items"
+                                    data-id="${userId}"
+                                    data-role="${role}">
+                                    ${roleText}
+                            </div>
+                            <button class="manage-btn" data-id="${userId}" id="ban-btn">
+                                차단
                             </button>
-
-                            ${remindYn === "Y" ? `
-                            <button class="manage-btn" data-id="${item.prescriptionId}">
-                                복약 관리
-                            </button>` : ''}
                         </div>
                     </div>
                 `;
@@ -167,30 +175,30 @@
 <!-- 본문 -->
 <div class="auth-container">
     <div class="auth-box">
-        <div id="prescription-container">
-            <div class="prescription-image">
-                <img src="/icons/userManagement.png" alt="회원 관리 아이콘">
+        <div id="userList-container">
+            <div class="userList-image">
+<!--                <img src="/icons/userManagement.png" alt="회원 관리 아이콘">-->
             </div>
-            <div class="title" style="font-weight: bold; font-size: x-large">처방내역</div>
-            <div id="prescription-list"></div>
+            <div class="title" style="font-weight: bold; font-size: x-large">회원 관리</div>
+            <div id="user-list"></div>
         </div>
     </div>
 </div>
 
 <!-- 모달 -->
-<div class="modal" id="reminderModal">
+<div class="modal" id="roleModal">
     <div class="modal-content">
         <h3>권한 변경</h3>
 
-        <div class="meal-time-options" id="mealOptionWrapper">
-            <div class="meal-btn" data-value="super">슈퍼</div>
-            <div class="meal-btn" data-value="admin">관리자</div>
-            <div class="meal-btn" data-value="user">회원</div>
+        <div class="role-options" id="roleOptionWrapper">
+            <div class="role-btn" data-value="super">슈퍼</div>
+            <div class="role-btn" data-value="admin">관리자</div>
+            <div class="role-btn" data-value="user">회원</div>
         </div>
 
         <div class="modal-buttons" id="modalBtnWrapper">
-            <button id="closeReminderModal">닫기</button>
-            <button id="confirmReminderBtn">확인</button>
+            <button id="closeRoleModal">닫기</button>
+            <button id="confirmRoleBtn">확인</button>
         </div>
     </div>
 </div>
